# xkep-cae

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
__xkep_cae_deprecated/: api.py  assembly.py  assembly_plasticity.py  bc.py  solver.py
contracts/: check_dynamic_contact.py  diagnose_three_point_bend.py  generate_oscillation_images.py  render_three_point_bend.py  validate_process_contracts.py
docs/: abaqus-differences.md  cosserat-design.md  examples.md  roadmap.md  transient-output-design.md
examples/: README.md  cantilever_beam_3d.inp  elastoplastic_bar.inp  l_frame_3d.inp  portal_frame.inp  run_examples.py  run_nonlinear_bend3p.py  three_point_bending.inp
pycae/: __init__.py  api.py  assembly.py  bc.py  solver.py
results/: test_results.xlsx
scripts/: bench_adaptive_dt.py  bench_baseline.py  benchmark_process_overhead.py  diagnose_7wire_convergence.py  diagnose_conditioning.py  diagnose_cr_beam_convergence.py  diagnose_disp_ctrl.py  diagnose_overshoot.py  diagnose_single_wire.py  diagnose_tangent_quality.py  generate_3d_beam_gallery.py  generate_multiview_gallery.py  measure_wire_calculation_time.py  profile_ncp_7strand.py  render_friction_bend_3d.py  run_bending_oscillation.py  setup-gh.sh  test_phase1_friction_delta.py  test_phase1_friction_nodelta.py  validate_process_contracts.py  verify_19strand_bending_oscillation.py  verify_7strand_bending_oscillation.py  verify_90deg_bend.py  verify_90deg_no_contact.py  verify_90deg_oscillation.py  verify_coating_contact_convergence.py  verify_coating_gap.py  verify_coating_parametric_study.py  verify_dynamics_friction_oscillation.py  verify_dynamics_ncp.py  verify_friction_bending_convergence.py  verify_single_strand_osc.py  verify_smooth_contact.py  verify_smooth_penalty_friction_bend.py
(+1015 files in other folders)
