[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xkep-cae"
version = "0.1.0"
description = "ニッチドメイン問題を解くための自作有限要素ソルバー基盤"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
amg = ["pyamg>=5.0"]
fast = ["numba>=0.57"]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "external: pymesh等の外部依存が必要なテスト",
    "bend3p: 3点曲げ試験",
    "bend4p: 4点曲げ試験",
    "tensile: 引張試験",
    "torsion: ねん回試験",
    "freq_response: 周波数応答試験",
    "cosserat: Cosserat rod 要素テスト",
    "sri: SRI（選択的低減積分）テスト",
    "nonlinear: 非線形解析テスト",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
]
ignore = [
    "E501",  # line length (formatterに任せる)
]

[tool.ruff.format]
quote-style = "double"

[tool.hatch.build.targets.wheel]
packages = ["xkep_cae"]
